web/styles/subscriptions.css
/* ... */
.stream-permissions,
.stream-creation-body,
.group-permissions {
    .input-group {
        margin-bottom: 10px;

        &.message-retention-setting-group {
            & input {
                width: 5ch;
                text-align: right;
            }
        }
    }

    .settings_select {
        /* Match with select elements in settings page */
        min-width: 325px;
        max-width: 100%;
        height: 30px;
    }

    & select.stream_post_policy_setting {
        margin-bottom: 10px;
    }

    .dropdown-widget-button {
        /* Match the margin with other input groups around. */
        margin-bottom: 20px;
        min-width: 325px;
        max-width: 100%;
        height: 30px;
    }

    .default-stream {
        margin: 25px 0;
        width: fit-content;

        .inline {
            display: inline;
        }
    }
}

#change_user_group_description,
#change_stream_description {
    width: 100%;
    height: 80px;
    margin-bottom: 4px;
    box-sizing: border-box;
}

.stream-permissions .stream-message-retention-days-input input[type="text"] {
    border-radius: 5px;
    box-shadow: none;
    margin: 0;
    height: inherit;
}

@media (width < $lg_min) {
    .user-groups-container,
    .subscriptions-container {
        max-width: 95%;
    }

    #groups_overlay,
    #subscription_overlay {
        .left {
            width: 40%;
        }

        .right {
            width: calc(60% - 1px);
        }
    }
}

@media (width < $lg_min) {
    .subscriptions-container .left .list-toggler-container {
        flex-wrap: wrap;
    }

    .list-toggler-container {
        text-align: center;
    }

    #groups_overlay .group_settings_header,
    #subscription_overlay .stream_settings_header {
        flex-wrap: wrap;
    }
}

/* Note that this block has settings_page CSS as well, and thus needs
   to match the media queries in settings.css.

   Longer-term we should extract this logic two-column-overlay class
   to read more naturally. */
@media (width < $md_min) {
    .user-groups-container,
    .subscriptions-container {
        position: relative;
        overflow: hidden;

        .list-toggler-container {
            text-align: left;
        }

        .user-groups-header .fa-chevron-left,
        .subscriptions-header .fa-chevron-left {
            display: block;
        }
    }

    #groups_overlay .left,
    #groups_overlay .right,
    #subscription_overlay .left,
    #subscription_overlay .right,
    #settings_page .content-wrapper.right {
        position: absolute;
        display: block;
        margin: 0;
        width: 100%;
        height: calc(100% - 45px);

        border: none;
    }

    #groups_overlay .right,
    #subscription_overlay .right,
    #settings_page .content-wrapper.right {
        position: absolute;
        left: 101%;

        top: 45px;
        background-color: var(--color-background-modal);
        border-top: none;

        transition: all 0.3s ease;
        z-index: 10;

        &.show {
            left: 0%;
        }
    }

    #groups_overlay {
        .display-type {
            display: none;
        }
    }

    #subscription_overlay,
    #groups_overlay {
        .user-groups-container,
        .subscriptions-container {
            height: 95%;
        }

        .settings {
            overflow: auto;
            -webkit-overflow-scrolling: touch;
        }
    }
}

@media (width < $sm_min) {
    #groups_overlay .user_group_settings_wrapper,
    #subscription_overlay .subscription_settings {
        .button-group {
            display: block;
            float: right;
            margin-top: 10px;
        }

        .group-header,
        .stream-header {
            .button-group {
                margin-top: -5px;
            }
        }

        .group_change_property_info,
        .stream_change_property_info {
            /* For small widths where there is not enough space
            to show alert beside stream name we set its display
            to block so it is shown in new line. But to avoid
            it covering whole screen width we set max-width
            so that it does not losses inline-block appearance. */

            /* TODO: This will probably be not required once
            we have tabbed navigation as button group width
            will be smaller. */
            display: block;
            max-width: max-content;
            white-space: nowrap;
        }

        .save-button-controls {
            display: block;
            margin: 0 0 10px;

            &.hide {
                display: none;
            }
        }
    }
}

@media (width <= 500px) {
    #groups_overlay,
    #subscription_overlay {
        .groups_settings_header,
        .stream_settings_header {
            display: block;
            text-align: center;
            margin-left: 0;

            .tab-container {
                .ind-tab {
                    width: 85px;
                }
            }
        }
    }
}

