stream_settings: Change page breakpoint In stream settings for lower page widths the filter and create new stream buttons would be shifted down due to the lack of space, breaking the stream list. Changed the media query in subscription.css that changes the page layout for lower widths to take into account the size of this buttons. Fixes #29514

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -1125,7 +1125,7 @@ div.settings-radio-input-parent {
 
    Longer-term we should extract this logic two-column-overlay class
    to read more naturally. */
-@media (width < $md_min) {
+@media (width < 873px) {
     .user-groups-container,
     .subscriptions-container {
         position: relative;
